--- a/index.html
+++ b/index.html
@@ -14,25 +14,26 @@
   </head>
 
   <body>
-    <div class="container">
+    <div class="container" style="padding-left: 0">
       <div class="row">
-        <div class="col-4">
+        <div class="col-4 scrollable">
           <table class="table table-sm">
             <tbody id="lastSplits">
             </tbody>
           </table>
         </div>
-        <div class="col-5 nopadding">
+        <div class="col-5">
           <div class="row">
-            <div class="col-12 nopadding">
+            <div class="col-12">
+              <h3 id="time"></h3>
               <button style="display: inline-block; position: relative; top: -7px; margin-right: 10px; display: none" type="button" class="btn btn-primary" onclick="add()">Split</button>
               <h3 style="display: inline-block" id="counter">
                 <button type="button" class="btn btn-primary" onclick="init()">Start !</button>
               </h3>
             </div>
-            <div class="col-12 nopadding btn-grid">
+            <div class="col-12 btn-grid">
               <button style="display: none" type="button" class="btn btn-secondary btn-sm" onclick="remove()">cancel</button>
-              <button style="display: none" type="button" class="btn btn-secondary btn-sm" onclick="init()">reset</button>
+              <button style="display: none" type="button" class="btn btn-secondary btn-sm" onclick="window.location.reload()">reset</button>
               <br>
               <button style="display: none" type="button" class="btn btn-secondary btn-sm" onclick="pause()">pause</button>
               <button style="display: none" type="button" class="btn btn-secondary btn-sm" onclick="resume()">resume</button>
