Fix AppImage build

--- a/index.html
+++ b/index.html
@@ -34,9 +34,7 @@
             <div class="col-12 btn-grid">
               <button style="display: none" type="button" class="btn btn-secondary btn-sm" onclick="remove()">cancel</button>
               <button style="display: none" type="button" class="btn btn-secondary btn-sm" onclick="window.location.reload()">reset</button>
-              <br>
-              <button style="display: none" type="button" class="btn btn-secondary btn-sm" onclick="pause()">pause</button>
-              <button style="display: none" type="button" class="btn btn-secondary btn-sm" onclick="resume()">resume</button>
+              <button style="display: none" type="button" class="btn btn-secondary btn-sm" onclick="pauseUnpause()">&#9646;&#9646; / &#9654;</button>
             </div>
           </div>
         </div>
